add images to file, add img elements

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             margin-left: auto;
             margin-right: auto;
             background-color: #e6e4d9;
+            background-image: url("images/pattern.png");
         }
 
         #mainheader {
@@ -69,12 +70,15 @@
 <body>
     <header id="mainheader">
         <nav>
-            Header menu goes here
+            <!-- <img src="images/pie.png" alt="pie icon" height="55" /> -->
+            <img src="images/cake.svg" alt="pie icon" height="55" />
         </nav>
     </header>
 
     <div style="width:1000px;margin-left: auto;margin-right: auto;">
+
         <aside id="leftmenu">
+            <img src="images/bethanylogo.png" alt="Bethany logo" />
             <header>
                 <h4 style="text-align: center;">Browse our pies</h4>
             </header>
@@ -87,6 +91,7 @@
                 <header>
                     <h1 style="font-size:35px;color:#a593c2">Welcome to Bethany's Pie Shop</h1>
                 </header>
+                <img src="images/bethany.jpg" alt="Bethany photo" width="700" />
                 <h2>Our history</h2>
                 <p>
                     For many years, <b>Bethany</b> has been baking the most delicious pies at her home. In 2013, we
