--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Bethany's Pie Shop">
     <meta name="description" content="Store front for Bethany's Pie Shop">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="favicon.png">
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <![endif]-->
@@ -91,7 +92,10 @@
                 <header>
                     <h1 style="font-size:35px;color:#a593c2">Welcome to Bethany's Pie Shop</h1>
                 </header>
+                <figure>
                 <img src="images/bethany.jpg" alt="Bethany photo" width="700" />
+                <figcaption>Bethany in her pie shop</figcaption>
+                </figure>
                 <h2>Our history</h2>
                 <p>
                     For many years, <b>Bethany</b> has been baking the most delicious pies at her home. In 2013, we
@@ -120,12 +124,8 @@
                 <h4>Cheese cake</h4>
                 $12.95 - serves 4<br>
                 <img src="cheesecake.jpg" width="500" alt="Cheese cake with strawberry" height="300" />
-
             </section>
-
-            
         </main>
-        
     </div>
     <footer>
         <p>Our address is <address>Bethany's Pie Shop - Bakery Street 555 Brussels Belgium</address>
