--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Bethany' Pie Shop!</title>
-    <meta name="author" content="Bethany's Pie Shop">
-    <meta name="description" content="Store front for Bethany's Pie Shop">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="favicon.png">
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -67,7 +64,6 @@
         }
     </style>
 </head>
-
 <body>
     <header id="mainheader">
         <nav>
@@ -132,7 +128,5 @@
         </p>
         <small>2020 Bethany's Pie Shop - All rights reserved</small>
     </footer>
-
 </body>
-
 </html>
