--- a/index.html
+++ b/index.html
@@ -1,84 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
     <title>Welcome to Bethany' Pie Shop!</title>
+    <meta name="author" content="Bethany's Pie Shop">
+    <meta name="description" content="Store front for Bethany's Pie Shop">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="stylesheet" href="styles.css">
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <![endif]-->
-    <style>
-        body {
-            margin-top: 0px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin-left: auto;
-            margin-right: auto;
-            background-color: #e6e4d9;
-            background-image: url("images/pattern.png");
-        }
-
-        #mainheader {
-            background-color: #a593c2;
-        }
-
-        #leftmenu {
-            float: left;
-            width: 30%;
-            margin-bottom: 20px;
-        }
-
-        nav {
-            height: 60px;
-            width: 1000px;
-            margin: 0 auto 20px;
-        }
-
-        .searchbox {
-            padding: 5px;
-            margin: 10px 10px;
-            width: 200px;
-        }
-
-        #main {
-            float: right;
-            width: 70%;
-            margin-bottom: 20px;
-        }
-
-        footer {
-            clear: both;
-            width: 100%;
-        }
-
-        header,
-        section,
-        footer,
-        aside,
-        nav,
-        main,
-        article,
-        figure {
-            display: block;
-        }
-    </style>
 </head>
+
 <body>
     <header id="mainheader">
         <nav>
-            <!-- <img src="images/pie.png" alt="pie icon" height="55" /> -->
-            <img src="images/cake.svg" alt="pie icon" height="55" />
+            <ul>
+                <li><img src="images/cake.svg" height="55" /></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="pieoverview.html">All pies</a></li>
+            </ul>
         </nav>
     </header>
 
     <div style="width:1000px;margin-left: auto;margin-right: auto;">
-
         <aside id="leftmenu">
-            <img src="images/bethanylogo.png" alt="Bethany logo" />
+            <a href="index.html"><img src="images/bethanylogo.png" /></a>
             <header>
                 <h4 style="text-align: center;">Browse our pies</h4>
             </header>
+            <ul>
+                <li><a href="pieoverview.html">All pies</a></li>
+                <li><a href="cheesecakes.html">Cheese cakes</a></li>
+                <li><a href="fruitpies.html">Fruit pies</a></li>
+                <li><a href="seasonalpies.html">Seasonal pies</a></li>
+                <li><a href="#promos">Promotions</a></li>
+            </ul>
             <input type="search" class="searchbox" placeholder="Search our store" />
 
         </aside>
@@ -89,8 +49,8 @@
                     <h1 style="font-size:35px;color:#a593c2">Welcome to Bethany's Pie Shop</h1>
                 </header>
                 <figure>
-                <img src="images/bethany.jpg" alt="Bethany photo" width="700" />
-                <figcaption>Bethany in her pie shop</figcaption>
+                    <img src="images/bethany-fullsize.jpg" width="600" alt="Bethany in her pie shop" />
+                    <figcaption>Bethany in her pie shop</figcaption>
                 </figure>
                 <h2>Our history</h2>
                 <p>
@@ -113,20 +73,29 @@
                     Bethany is famous for using only the best ingredients. This way, we can make sure
                     that our pies are absolutely the best.
                 </p>
+
+                <p>Download our full <a href="downloads/Price list.zip">price list</a></p>
             </article>
 
-            <section>
+            <section id="promos">
                 <h3 style="font-family:verdana;">&nbsp;Our weekly promotions</h3>
                 <h4>Cheese cake</h4>
                 $12.95 - serves 4<br>
-                <img src="cheesecake.jpg" width="500" alt="Cheese cake with strawberry" height="300" />
+                <img src="https://gillcleerenpluralsight.blob.core.windows.net/files/cheesecake.jpg" width="500"
+                    alt="Cheese cake with strawberry" height="300" />
             </section>
+
+           
         </main>
+        <footer>
+            <p>Our address is <address>Bethany's Pie Shop - Bakery Street 555 Brussels Belgium</address>
+            </p>
+            <small>&copy;2020 Bethany's Pie Shop - All rights reserved</small>
+            <p>Contact us via <a href="mailto:info@bethanyspieshop.com">email</a></p>
+            <p><small><a href="https://www.snowball.be">Created by Snowball</a></small></p>
+        </footer>
     </div>
-    <footer>
-        <p>Our address is <address>Bethany's Pie Shop - Bakery Street 555 Brussels Belgium</address>
-        </p>
-        <small>&copy;2020 Bethany's Pie Shop - All rights reserved</small>
-    </footer>
+
 </body>
+
 </html>
