add save as favorites button and js functions

--- a/applepie.html
+++ b/applepie.html
@@ -13,6 +13,25 @@
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <![endif]-->
+    <script>
+
+        function save() {
+            localStorage.setItem("applepie", true);
+        }
+
+        window.onload = function() {
+            var favorite = document.getElementById("favorite");
+            if(window.localStorage)
+            {
+                var storage = window.localStorage;
+                if(storage.getItem("applepie") == "true")
+                {
+                    favorite.innerHTML = "Apple pie is one of your favorites!";
+                }
+            }
+        }
+
+    </script>
 </head>
 
 <body>
@@ -41,6 +60,11 @@
                     <img src="images/products/applepie.jpg" width="600" alt="Apple pie" />
                     <figcaption>Our world-famous apple pie</figcaption>
                 </figure>
+
+                <p>
+                    <button onclick="save()" type="button">Save as favorite</button>
+                    <span id="favorite"></span>
+                </p>
 
 
                 <div style="background-color:#f8f4f1;">
